[Silicon] few updates

--- a/PhDThesis.tex
+++ b/PhDThesis.tex
@@ -74,13 +74,13 @@
 % needed at various stages
 %% \newcommand{\thesistitle}{Performance optimisation and evaluation
 %% studies for the CLIC vertex detector}
-  \newcommand{\thesistitle}{Simulation studies and measurements of
-    thin pixel sensors for the CLIC vertex detector}
-  \newcommand*{\thesisauthor}{Niloufar Alipour Tehrani}
-  \newcommand*{\thesistown}{citizen of Meyrin (Gen\`{e}ve)}
-  \renewcommand*{\InstituteName}{\PI}
-  \renewcommand*{\inInstitute}{\inPI}
-  \renewcommand*{\InstituteAddress}{\PIaddress}
+\newcommand{\thesistitle}{Test-beam measurements and simulations of
+  thin pixel sensors for the CLIC vertex detector}
+\newcommand*{\thesisauthor}{Niloufar Alipour Tehrani}
+\newcommand*{\thesistown}{citizen of Meyrin (Gen\`{e}ve)}
+\renewcommand*{\InstituteName}{\PI}
+\renewcommand*{\inInstitute}{\inPI}
+\renewcommand*{\InstituteAddress}{\PIaddress}
 % Adjust \thesisreferee...text depending on male/female referee
 \newcommand*{\thesisrefereeonetext}{1.\ Gutachter}
 \newcommand*{\thesisrefereeone}{Prof.\ Dr.\ John Smith}
