[Silicon] Reviewed the formula

--- a/PhDThesis.tex
+++ b/PhDThesis.tex
@@ -74,8 +74,8 @@
 % needed at various stages
 %% \newcommand{\thesistitle}{Performance optimisation and evaluation
 %% studies for the CLIC vertex detector}
-\newcommand{\thesistitle}{Test-beam measurements and simulations of
-  thin pixel sensors for the CLIC vertex detector}
+\newcommand{\thesistitle}{Test-beam measurements and simulation
+  studies of thin pixel sensors for the CLIC vertex detector}
 \newcommand*{\thesisauthor}{Niloufar Alipour Tehrani}
 \newcommand*{\thesistown}{citizen of Meyrin (Gen\`{e}ve)}
 \renewcommand*{\InstituteName}{\PI}
